--- a/src/app/components/calander/calander.component.scss
+++ b/src/app/components/calander/calander.component.scss
@@ -21,3 +21,14 @@
   overflow-y: auto;
   position: relative;
 }
+
+.calendar-container {
+  height: 100vh;
+  @media (max-width: 767.98px) {
+    height: 100svh;
+  }
+  max-height: 90vh;
+  @media (max-width: 767.98px) {
+    max-height: 90svh;
+  }
+}
